src/test/deca/codegen/valid/without_class/minus_overflow.deca
// Description:
// 	  Teste l'overflow pour le minus entier (valide)
//
// Resultats:
//  
//
// Historique:
// 	  cree le /01/2023
{
    int x = 2147483647;
    int y = -x - 2;
}