src/test/deca/codegen/invalid/without_class/minus_overflow.deca
// Description:
// 	  Teste l'overflow pour le minus flottant
//
// Resultats:
//  Number overflow
//  line 11
// Historique:
// 	  cree le /01/2023
{
    float x = 3.402823466e+38;
    float y = -x - x;
}